--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, dolor. Reprehenderit dolorem obcaecati numquam nostrum. Dolorum error maxime nulla libero tempore reiciendis consequatur animi alias aliquam culpa rerum harum molestias inventore quas numquam unde magni, quibusdam saepe officia, possimus voluptatum in? Totam magni debitis est ipsa odio voluptates nobis rem necessitatibus facere eligendi, quibusdam quasi animi impedit, repellendus sint vero ratione quas natus, soluta ad delectus? Sunt nam eveniet enim et, fugit, excepturi soluta voluptatum nulla quaerat ipsum voluptas id nesciunt ad. Totam, dolores accusantium dignissimos adipisci commodi incidunt officia dolorum quas nulla recusandae ut qui delectus cum error eaque?</p>
     </div>
    </div>
+   <div class="div">
+    <h3>kim kim khai sudu ice cream</h3>
+    <img src="images/pexels-teejay-1362534.jpg" alt="">
+   </div>
  
 </body>
 </html>
